samples/_failures_safe/1761551312_8d3e1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f8fa027.c: In function ‘main’:
./samples/SAFE/__tmp_6f8fa027.c:186:24: error: missing terminating " character
  186 |                 printf("Error: Factorial computation
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6f8fa027.c:186:17: error: expected expression at end of input
  186 |                 printf("Error: Factorial computation
      |                 ^~~~~~
./samples/SAFE/__tmp_6f8fa027.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6f8fa027.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6f8fa027.c:186:17: error: expected declaration or statement at end of input
